@@ -1,32 +1,0 @@
-output {
-    #redis {
-    #    type syslog
-    #    key syslog
-    #    name redis-localhost
-    #    host 127.0.0.1
-    #    port 6379
-    #    database 0
-    #}
-    screen {
-        type syslog
-        send_to stderr
-    }
-}
-
-input {
-    file {
-        type syslog
-        path /var/log/messages
-    }
-}
-
-logger {
-    #file {
-    #    filename /var/log/awesant/agent.log
-    #    maxlevel info
-    #    minlevel emerg
-    #}
-    screen {
-        maxlevel info
-    }
-}
